--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kioskeys-bot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Bot de WhatsApp con Twilio y OpenAI para KiosKeys",
   "main": "index.js",
   "type": "module",
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
