--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "kioskeys-bot",
-  "version": "1.1.0",
-  "description": "Bot de WhatsApp con Twilio y OpenAI para KiosKeys",
-  "main": "index.js",
+  "version": "1.1.2",
   "type": "module",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "main": "index.js",
+  "scripts": { "start": "node index.js" },
+  "engines": { "node": ">=18.0.0" },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
     "twilio": "^4.22.0"
   }
 }
