--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "kioskeys-bot",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "type": "module",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
-  "engines": { "node": ">=18.0.0" },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "NODE_ENV=development node index.js"
+  },
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
-    "cheerio": "^1.0.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "body-parser": "^1.20.3",
+    "express": "^4.19.2",
+    "googleapis": "^131.0.0",
+    "openai": "^4.56.0",
     "twilio": "^4.22.0"
   }
 }
