--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "kioskeys-bot",
-  "version": "1.2.0",
+  "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "engines": { "node": ">=18 <=22" },
   "scripts": {
-    "start": "node index.js",
-    "dev": "NODE_ENV=development node index.js"
-  },
-  "engines": {
-    "node": ">=20"
+    "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
     "express": "^4.19.2",
-    "googleapis": "^131.0.0",
-    "openai": "^4.56.0",
-    "twilio": "^4.22.0"
+    "body-parser": "^1.20.2",
+    "twilio": "^4.23.0",
+    "openai": "^4.52.0",
+    "googleapis": "^131.0.0"
   }
 }
